Fix button stretching if in a parent that is flexed

--- a/src/components/common/styles/Button.scss
+++ b/src/components/common/styles/Button.scss
@@ -35,8 +35,8 @@ a.Button {
     transition: background 0.3s, border 0.3s, color 0.3s;
 
     display: inline-block;
-    // justify-content: center;
-    // align-items: center;
+    // If in a flexed parent...
+    align-self: center;
 
     padding: 0.75rem 1.5rem;
     margin: 0.5rem;
